--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -31,7 +31,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Github webapp</a>
+          <a class="navbar-brand" href="/">Github webapp</a>
         </div>
       </div>
     </div>
